[gd_scene load_steps=6 format=3 uid="uid://uya40i87yk5o"]

[ext_resource type="Script" uid="uid://rc4mjjx345h5" path="res://scripts/enemy.gd" id="1_x1d7m"]
[ext_resource type="PackedScene" uid="uid://oc0djmbcgine" path="res://scene/enemies/Enemy Model/wendigo.glb" id="1_xoavv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x1d7m"]
radius = 0.4
height = 2.2304688

[sub_resource type="SphereShape3D" id="SphereShape3D_fycf7"]
radius = 12.0

[sub_resource type="SphereShape3D" id="SphereShape3D_xoavv"]
radius = 1.5

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_x1d7m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9436798, -0.015045166)
shape = SubResource("CapsuleShape3D_x1d7m")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_fycf7")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.90930873, 0)
shape = SubResource("SphereShape3D_xoavv")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="Sketchfab_Scene" parent="Model" instance=ExtResource("1_xoavv")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -1, -15)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
